--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "dayjs": "^1.10.7",
     "js-cookie": "^3.0.1",
     "vee-validate": "^3.4.14",
     "vue": "^2.6.11",
